# Keep_1080p_or_BEST

./: .gitignore  KeepBest_VisualAI.py  Keep_1080p_VisualAI_v2_vs_v3_Comparison.md  README.md  Run_me.bat  pyproject.toml  pyrightconfig.json  requirements.txt  x_ray_project.py
docs/: Keep_1080p_VisualAI_Optimization_Walkthrough.md
rust_output/: Cargo.toml
rust_output/src/: KeepBest_VisualAI.rs  lib.rs  x_ray_project.rs
tests/: __init__.py  test_smart_xray.py
